--- a/images.png/index.html
+++ b/images.png/index.html
@@ -9,15 +9,15 @@
     <nav>
       <div id="home">
         <div class="profile_name">
-          Gulshan Kumar Thakur
+          Tejas Nayak B
           <div class="contact_info">
             <img src="images.png\envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          itsga31na@gmail.com
+          tejasnayak@jeemail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
           <img src="images.png\phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +91 8302461429
+          +91 1234567890
 
         </div>
         </div>
@@ -40,10 +40,13 @@
 
       <div>
           <h1>
-            Hi, I'm Gulshan Kumar Thakur! <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/>
+            Hi, I'm Tejas Nayak B! <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/>
           </h1>
           <p>
-             I am a Junior, studying Computer Science and Engineering, at NITK Surathkal. I enjoy coding, building things, and problem solving. I am interested in Cloud Computing, Data Structures and Algorithms, and Development.
+             I am currently studying  2nd year and I am  pusrusing my majors in computer science .
+             I have been into web development now almost for 4 months now.
+             Currently Am enough familiar with HTML,CSS and JavaScript to work with mini projects.
+             I am eager to develop my skills which will be helpful for me in future.
         </p>
       </div>
     </section>
@@ -110,14 +113,14 @@
           <div class="project-card">
             <h3>Simple Interest Calculator</h3>
             <ul>
-                <li>Developed a simple interest calculator which takes input for Rate of interest, years, amount of money and gives dynmic output in sentence.</li>
+                <li>Developed a simple interest calculator which takes input for Rate of interest,years,amount of money and gives dynmic output in sentence.</li>
             </ul>
         </div>
         <hr>
         <div class="project-card">
             <h3>Units Converter</h3>
             <ul>
-              <li>Created a multi page unit converter which converts tempertaure, distance, weight, simplemath, height and time.</li>
+              <li>Created a multi page unit converter which converts tempertaure,distance,weight,simplemath,height and time.</li>
             </ul>
           </div>
     </div>
@@ -131,12 +134,12 @@
     <div class="all_recommendations" id="all_recommendations">
         <div class="recommendation">
             <span>&#8220;</span>
-            Gulshan is very smart and grasps onto things which are related to web development so quickly that it saves a lot of time which helps us in make him learn new concepts which were useful for our company other than the basic concepts taught to trainees.
+            Tejas is very smart and grasps onto things which are related to web development so quickly that it saves a lot of time which helps us in make him learn new concepts which were useful for our company other than the basic concepts taught to trainees.
             <span>&#8221;</span>
         </div>
         <div class="recommendation">
             <span>&#8220;</span>
-            Gulshan not only has quick learning quirks but also has great leadership skill ,he wasnot only mentoring group at the same time learning related subjects which might be helpful too even the senior developers present here .Inshort he has a great personality and helping nature. 
+            Tejas not only has quick learning quirks but also has great leadership skill ,he wasnot only mentoring group at the same time learning related subjects which might be helpful too even the senior developers present here .Inshort he has a great personality and helping nature. 
             <span>&#8221;</span>
         </div>
         <div class="recommendation">
