--- a/images.png/index.html
+++ b/images.png/index.html
@@ -9,15 +9,15 @@
     <nav>
       <div id="home">
         <div class="profile_name">
-          Tejas Nayak B
+          Gulshan Kumar Thakur
           <div class="contact_info">
             <img src="images.png\envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          tejasnayak@jeemail.com
+          itsga31na@gmail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
           <img src="images.png\phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +91 1234567890
+          +91 8302461429
 
         </div>
         </div>
@@ -40,13 +40,10 @@
 
       <div>
           <h1>
-            Hi, I'm Tejas Nayak B! <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/>
+            Hi, I'm Gulshan Kumar Thakur! <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/>
           </h1>
           <p>
-             I am currently studying  2nd year and I am  pusrusing my majors in computer science .
-             I have been into web development now almost for 4 months now.
-             Currently Am enough familiar with HTML,CSS and JavaScript to work with mini projects.
-             I am eager to develop my skills which will be helpful for me in future.
+             I am a Junior, studying Computer Science and Engineering, at NITK Surathkal. I enjoy coding, building things, and problem solving. I am interested in Cloud Computing, Data Structures and Algorithms, and Development.
         </p>
       </div>
     </section>
@@ -113,14 +110,14 @@
           <div class="project-card">
             <h3>Simple Interest Calculator</h3>
             <ul>
-                <li>Developed a simple interest calculator which takes input for Rate of interest,years,amount of money and gives dynmic output in sentence.</li>
+                <li>Developed a simple interest calculator which takes input for Rate of interest, years, amount of money and gives dynmic output in sentence.</li>
             </ul>
         </div>
         <hr>
         <div class="project-card">
             <h3>Units Converter</h3>
             <ul>
-              <li>Created a multi page unit converter which converts tempertaure,distance,weight,simplemath,height and time.</li>
+              <li>Created a multi page unit converter which converts tempertaure, distance, weight, simplemath, height and time.</li>
             </ul>
           </div>
     </div>
@@ -134,17 +131,17 @@
     <div class="all_recommendations" id="all_recommendations">
         <div class="recommendation">
             <span>&#8220;</span>
-            Tejas is very smart and grasps onto things which are related to web development so quickly that it saves a lot of time which helps us in make him learn new concepts which were useful for our company other than the basic concepts taught to trainees.
+            Gulshan is very smart and grasps onto things which are related to web development so quickly that it saves a lot of time which helps us in make him learn new concepts which were useful for our company other than the basic concepts taught to trainees.
             <span>&#8221;</span>
         </div>
         <div class="recommendation">
             <span>&#8220;</span>
-            Tejas not only has quick learning quirks but also has great leadership skill ,he wasnot only mentoring group at the same time learning related subjects which might be helpful too even the senior developers present here .Inshort he has a great personality and helping nature. 
+            Gulshan not only has quick learning quirks but also has great leadership skill, he was not only mentoring group at the same time learning related subjects which might be helpful too even the senior developers present here .Inshort he has a great personality and helping nature. 
             <span>&#8221;</span>
         </div>
         <div class="recommendation">
             <span>&#8220;</span>
-            When it comes to experience he's the best ,I, once had worked with him he not only helped me in completeing my work also gave me few tips on how to get the work easily and fastly done.
+            When it comes to experience he's the best, I once had worked with him he not only helped me in completeing my work also gave me few tips on how to get the work easily and fastly done.
             <span>&#8221;</span>
         </div>
     </div>
