--- a/images.png/index.html
+++ b/images.png/index.html
@@ -103,7 +103,7 @@
             <div class="project-card">
             <h3>Green Escapes</h3>
             <ul>
-                <li>Developed an web app using HTML,CSS,Javascript and Navic system for the development of rural areas via tourism annd hospitality.</li>
+                <li>Developed an web app using HTML, CSS, Javascript and Navic system for the development of rural areas via tourism annd hospitality.</li>
             </ul>
         </div>
           <hr>
@@ -131,17 +131,17 @@
     <div class="all_recommendations" id="all_recommendations">
         <div class="recommendation">
             <span>&#8220;</span>
-            Gulshan is very smart and grasps onto things which are related to web development so quickly that it saves a lot of time which helps us in make him learn new concepts which were useful for our company other than the basic concepts taught to trainees.
+            Gulshan is very smart and grasps things that are related to web development so quickly that it saves a lot of time which helps us make him learn new concepts that are useful for our company other than the basic concepts taught to trainees.
             <span>&#8221;</span>
         </div>
         <div class="recommendation">
             <span>&#8220;</span>
-            Gulshan not only has quick learning quirks but also has great leadership skill, he was not only mentoring group at the same time learning related subjects which might be helpful too even the senior developers present here .Inshort he has a great personality and helping nature. 
+            Gulshan not only has quick learning quirks but also has great leadership skills, he wasn't only mentoring a group at the same time learning related subjects which might be helpful to even the senior developers present here . In short, he has a great personality and a helping nature. 
             <span>&#8221;</span>
         </div>
         <div class="recommendation">
             <span>&#8220;</span>
-            When it comes to experience he's the best, I once had worked with him he not only helped me in completeing my work also gave me few tips on how to get the work easily and fastly done.
+            When it comes to experience he's the best, I once worked with him, and he not only helped me complete my work but also gave me a few tips on how to get the work done easily and quickly.
             <span>&#8221;</span>
         </div>
     </div>
